# container-webview

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GitVersion.yml  Makefile  README.md  changelog.md  cliff.toml  docker-compose.yml  opencode.json  playwright.config.ts  sonar-project.properties
.ci-backup-20260425-163633/: dependabot.yml
.claude/: launch.json  settings.json
.config/: .hadolint.yaml  .markdownlint.yaml  .yamllint.yaml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  auto_assign.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  ci_issue.yml  config.yml  feature_request.yml  question.yml
.github/instructions/: architecture.instructions.md  backend_guidelines.instructions.md  docker_k8s.instructions.md  frontend_guidelines.instructions.md  python_guidelines.instructions.md  ruff_compliance.instructions.md  tests.instructions.md  typing.instructions.md
.github/workflows/: cd.yml  ci.yml  enforce-feature-branch.yml  mutation-testing.yml  pre-commit.yml  quality-gate-check.yml  quality.yml  release.yml  sonar.yml  sync-labels.yml
api/: .coverage  .dockerignore  Dockerfile  pyproject.toml  requirements.txt
api/app/: config.py  constants.py  demo.py  main.py  security.py
api/app/models/: hateoas.py
api/app/observability/: __init__.py
api/app/routers/: alerts.py  auth.py  config.py  lifecycle.py  logs.py  metrics.py  projects.py  topology.py
api/app/services/: alerts_service.py  auth_service.py  docker_client.py  lifecycle_service.py  metrics_service.py  project_manager.py  topology_service.py
api/app/tests/: conftest.py  test_demo_mode.py  test_main.py
api/app/tests/routers/: test_alerts.py  test_auth.py  test_lifecycle.py  test_logs.py  test_metrics.py  test_projects.py  test_topology.py
api/app/tests/services/: test_alerts_service.py  test_auth_service.py  test_container_alerts.py  test_docker_client.py  test_lifecycle_service.py  test_metrics_service.py  test_project_manager.py  test_topology_service.py
api/docker/entrypoints/: entrypoint.sh
code/: .eslintrc.cjs  .stylelintrc  DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
code/src/: About.js  App.js  App.tsx  Dashboard.js  Home.js  Login.js  NavigationBar.js  Profile.js  SideBar.js  main.tsx  overview-config.yaml
code/src/api/: README.md
code/src/api/docker/: alertsService.ts  authService.ts  lifecycleService.ts  metricsService.ts  projectService.ts  topologyService.ts
code/src/api/http/: client.ts  interceptors.ts
code/src/components/: README.md
code/src/components/alerts/: AlertsPanel.tsx
code/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
code/src/components/feedback/: Toast.module.scss  Toast.tsx
code/src/components/forms/: LoginForm.tsx
code/src/components/layout/: Layout.tsx  Navbar.tsx
code/src/components/layouts/: AppHeader.tsx  Header.module.scss  Header.tsx  Layout.module.scss  Layout.tsx  ProtectedRoute.tsx  PublicRoute.tsx  Sidebar.module.scss  Sidebar.tsx
code/src/components/loaders/: GlobalLoader.module.scss  GlobalLoader.tsx
code/src/components/metrics/: MetricsTable.tsx
code/src/components/projects/: ProjectCard.tsx
code/src/components/shared/: ErrorAlert.tsx  LoadingSpinner.tsx
code/src/components/ui/: BackendConnectionBanner.module.scss  BackendConnectionBanner.tsx  DemoBanner.module.scss  DemoBanner.test.tsx  DemoBanner.tsx  index.tsx
code/src/constants/: README.md  api.ts  app.ts  config.ts  routes.ts  storage.ts
code/src/contexts/: AuthContext.tsx
code/src/domain/alerts/: queries.ts  types.ts
code/src/domain/auth/: queries.ts  types.ts
code/src/domain/config/: queries.ts  types.ts
code/src/domain/health/: deriveHealth.ts
code/src/domain/lifecycle/: queries.ts
code/src/domain/metrics/: queries.ts  types.ts
code/src/domain/projects/: queries.ts  types.ts
code/src/domain/topology/: queries.ts  types.ts
code/src/features/: README.md
code/src/features/alerts/: AlertsDashboard.module.scss  (+2 more)
code/src/hooks/: README.md  useAuth.ts  useBackendStatus.ts  useTheme.ts
code/src/pages/: Alerts.tsx  DashboardPage.tsx  Login.module.scss  Login.tsx  LoginPage.tsx  Logs.tsx  Metrics.tsx  NotFound.module.scss  NotFound.tsx  ProjectDetailPage.tsx  ProjectPage.module.scss  ProjectWorkspacePage.module.scss  ProjectWorkspacePage.tsx  Projects.module.scss  Projects.tsx  README.md  Services.tsx  Topology.tsx
code/src/projects/: Project.ts  ProjectsPage.tsx
code/src/providers/: AuthContext.ts  AuthProvider.tsx  README.md
code/src/services/: AlertsService.ts  ApiClient.ts  AuthService.ts  LifecycleService.ts  MetricsService.ts  ProjectService.ts  TopologyService.ts
code/src/stores/: README.md  loadingStore.ts
code/src/styles/: _globals.scss  _mixins.scss  _reset.scss  _theme.scss  _variables.scss  index.scss
code/src/test/: setup.ts
code/src/types/: README.md  api.ts  auth.ts
code/src/utils/: Auth.js  Notifier.js  Ping.js  README.md  User.js  auth.test.ts  auth.ts  logger.ts  result.ts
config-tools/: .hadolint.yaml  .markdownlint.yml  .yamllint.yaml
e2e/: Dockerfile
e2e/fixtures/: app.ts  mocks.ts
e2e/tests/: alerts.spec.ts  auth.spec.ts  logs.spec.ts  metrics.spec.ts  navigation.spec.ts  projects.spec.ts  services.spec.ts  topology.spec.ts
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/api/: deployment.yaml  pvc.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/ingress/: ingressroute.yaml  middleware.yaml
makefiles/: api.makefile  docker.makefile  node.makefile  project.makefile  quality-gate.Makefile  tests.makefile  tools.makefile
nginx/: nginx.conf
scripts/: quality_gate.py  update_host.ps1
tests/: README.md
(+22 files in other folders)
